# r2d2wm-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  recipe.json
.github/workflows/: build-and-test.yml  docker-publish.yml  fly.yml  rust.yml
config/: app_config.example.json  config.example.toml  create_db.sql  schedule.example.json  schedules.example.toml  settings.example.toml
r2d2wm-api/: Cargo.toml
r2d2wm-api/src/: data.rs  error.rs  main.rs  routes.rs
r2d2wm-api/src/data/: task.rs
r2d2wm-bot/: Cargo.toml
r2d2wm-bot/src/: bot.rs  command.rs  commands.rs  config.rs  environment.rs  error.rs  handler.rs  log.rs  main.rs  scheduler.rs  util.rs
r2d2wm-bot/src/command/: ping.rs  schedule.rs
r2d2wm-bot/src/config/: app_settings.rs  scheduled_message.rs
r2d2wm-bot/src/scheduler/: message.rs  persistence.rs
r2d2wm-core/: Cargo.toml
r2d2wm-core/src/: environment.rs  lib.rs  message.rs  task.rs
r2d2wm_api/: Cargo.toml
r2d2wm_api/src/: data.rs  main.rs
r2d2wm_common/: Cargo.toml
r2d2wm_common/src/: lib.rs
