[package]
name = "r2d2wm-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5" }
dotenvy = "0.15.7"
itertools = "0.13"
r2d2wm-core = { path = "../r2d2wm-core" }
rusqlite = { version = "0.31.0", features = ["bundled", "uuid"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.9.0", features = ["v4"] }
