[package]
name = "r2d2wm-bot"
authors = ["Noé Ksiazek <noe@ksiazek.xyz>"]
version = "0.1.0"
edition = "2021"
rust-version = "1.79"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
tracing = { version = "0.1.40", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
serenity = "0.12.2"
derive_more = { version = "1.0.0-beta", features = ["from"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
chrono = "0.4.38"
chrono-tz = "0.9.0"
croner = "2.0.4"
uuid = { version = "1.9.0", features = ["v4"] }

[dev-dependencies]
serde_test = "1.0.176"