[package]
name = "r2d2wm-bot"
authors = ["Noé Ksiazek <noe@ksiazek.xyz>"]
version = "0.3.0"
edition = "2021"
rust-version = "1.79"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
async-std = "1.12.0"
async-trait = "0.1.80"
chrono = "0.4.38"
chrono-tz = "0.9.0"
dotenvy = "0.15.7"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
serenity = "0.12.2"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tokio-cron-scheduler = "0.10.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.9.0", features = ["v4"] }

[dev-dependencies]
serde_test = "1.0.176"